--- a/istock/server/package.json
+++ b/istock/server/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "db": "^3.4.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongo": "^0.1.0",
-    "mongoose": "^6.7.5"
+    "mongoose": "^6.7.5",
+    "nodemon": "^2.0.20",
+    "validator": "^13.7.0"
   }
 }
