--- a/istock/client/package.json
+++ b/istock/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "axios": "^1.2.1",
     "flowbite": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
