--- a/istock/client/package.json
+++ b/istock/client/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
     "flowbite": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
