--- a/istock/client/package.json
+++ b/istock/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
     "flowbite": "^1.5.3",
+    "headlessui": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
