--- a/istock/client/package.json
+++ b/istock/client/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
+    "firebase": "^9.15.0",
     "flowbite": "^1.5.3",
     "headlessui": "^0.0.0",
     "react": "^18.2.0",
@@ -19,7 +20,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "redux-persist": "^6.0.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
