--- a/istock/client/package.json
+++ b/istock/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.4.3",
     "redux-persist": "^6.0.0",
     "sweetalert": "^2.1.2",
+    "tailwind-scrollbar": "^2.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
